# zephyr-lang-rust

./: CMakeLists.txt  Kconfig
.github/workflows/: docs.yml
samples/hello_world/: Cargo.toml
samples/philosophers/: Cargo.toml  Kconfig  prj.conf  sample.yaml
samples/philosophers/src/: condsync.rs  lib.rs  sysmutex.rs
tests/time/: Cargo.toml  testcase.yaml
zephyr/: Cargo.toml
zephyr-sys/: Cargo.toml  build.rs
zephyr-sys/src/: lib.rs
zephyr/src/: alloc_impl.rs  error.rs  lib.rs  object.rs  printk.rs  sync.rs  sys.rs  time.rs
zephyr/src/sync/: channel.rs
zephyr/src/sys/: queue.rs  sync.rs  thread.rs
