# Copyright (c) 2024 Linaro LTD
# SPDX-License-Identifier: Apache-2.0

[package]
name = "zephyr"
version = "3.7.0"
edition = "2021"
description = """
Functionality for Rust-based applications that run on Zephyr.
"""

[dependencies]
zephyr-sys = { version = "3.7.0", path = "../zephyr-sys" }

[dependencies.fugit]
version = "0.3.7"

# These are needed at build time.
# Whether these need to be vendored is an open question.  They are not
# used by the core Zephyr tree, but are needed by zephyr applications.
[build-dependencies]
zephyr-build = { version = "3.7.0", path = "../zephyr-build" }
